@@ -4,6 +4,7 @@
 
 --------------------------------------------------------------------------
   v.3.4-Alpha3 
+	- Added single song view
 	- Added Play Select drop down back in
 	- Fixed ordering of catalogs
 	- Fixed multi-genre Random Play
